--- a/WidgetWorld/Views/Shared/_Layout.cshtml
+++ b/WidgetWorld/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
                 <ul id="menu">
                     <li>@Html.ActionLink("Welcome", "Index", "Home")</li>
                     <li>@Html.ActionLink("Bandit Status", "Status", "Home")</li>
+                    <li>@Html.ActionLink("How does it work?", "How", "Home")</li>
                 </ul>
             </div>
         </div>
