--- a/WidgetWorld/Views/Home/Buy.cshtml
+++ b/WidgetWorld/Views/Home/Buy.cshtml
@@ -4,7 +4,7 @@
 <h2>
     Buy</h2>
 <p>
-    You clicked on the: @ViewBag.ButtonName
+    You clicked on the @ViewBag.ButtonName
 </p>
 <p>
     How many widgets are you going to purchase?</p>
